* 2007-08-13 - thorben.betten@open-xchange.com

 - Moved flag to store mail default folder have been checked to session due
   to new storage concept for UserSettingMail instances
 - Bugfix #8784: Mail folders with more messages than
   "imapMessageFetchLimit" defined in "imap.properties" can be sorted
   against "unread"

* 2007-08-10 - tobias.prinz@open-xchange.com

 - Fixed bug #8527: Versitparser now does not break if empty properties
   are in a VCard or ICal file.
   
* 2007-08-10 - thorben.betten@open-xchange.com

 - Forgot to delete temporary uploaded files manually after sending message
 - Bugfix #8701: Invoking own decoding method for MIME-encoded personal
   parts in internet addresses
 - Bugfix #8686: Closing first statement
 - Additional folder field for mail folder attribute "hasSubscribedSubfolders"
 - More reliable message attachment detection
 - Proper error codes in ParamContainer class
 - Removed unused methods from OCLPermission class and its subclasses
 - Ensure fully loaded folder object on delet or update
 - Bugfix #8743: Added message args to exception

* 2007-08-09 - marcus.klein@open-xchange.com

 - Added max idle timeout for uploads to configuration setting tree.

* 2007-08-09 - tobias.prinz@open-xchange.com

 - Bug 8653: Fixed counting of imports. Again.
 - Bug 8527: Fixed counting of imports.

* 2007-08-09 - ben.pahne@open-xchange.com

- Fixed Bug 8728: Private Flag was not removed after a move into
  a public folder.

* 2007-08-09 - thorben.betten@open-xchange.com

 - Bugfix 8726: Fixed detection of uuencoded body parts in a message
 - Enhanced file upload servlet by get request for uploaded files
 - New property in server.properties to define the max. idle time in millis
   for a temporary uploaded file
 - Enhanced mail by inline images referenced by locally stored files
############## PAY ATTENTION TO ME ! ################
 - CONFIG change: server.properties got an additonal
   property to define the max. idle time in millis